adds default avatar

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                 prop="avatar"
                 label="Фото профиля"
                 width="180">
+                <template scope="scope">
+                  <img src="http://i.pravatar.cc/150?img=52" />
+                </template>
               </el-table-column>
             </el-table>
           </template>
