--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title></title>
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <style type="text/css">
-      [v-cloak] > * { display:none; }
+      [v-cloak] {
+        display:none;
+      }
     </style>
   </head>
   <body>
