--- a/edit.html
+++ b/edit.html
@@ -13,8 +13,7 @@
   <body>
     <div id="app" v-cloak>
       <h2>Редактирование пользователя</h2>
-      <p><a href="index.html">На главную</a></p>
-      <p><a href="users.html">Список пользователей</a></p>
+      <p><a href="index.html">Список пользователей</a></p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
