date display in the table

--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
     </div>
 
     <template id="users-list">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Имя</th>
+            <th scope="col">Отчество</th>
+            <th scope="col">Фамилия</th>
+            <th scope="col">Фото профиля</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr v-for="user in users" :key="user.id">
+            <td>{{ user.id }}</td>
+            <td>{{ user.firstname }}</td>
+            <td>{{ user.secondname }}</td>
+            <td>{{ user.lastname }}</td>
+            <td>{{ user.avatar }}</td>
+          </tr>
+        </tbody>
+      </table>
       <p>{{ users }}</p>
     </template>
 
